--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenges de Voyages</title>
+  <title>Challenges de Voyage</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,13 +19,9 @@
   </header>
 
   <main>
-    <h2>Bienvenue sur Challenges de Voyage</h2>
-    <p>Découvrez nos challenges dans les destinations suivantes :</p>
-    <ul>
-      <li><a href="stockholm.html">Stockholm</a></li>
-      <li><a href="lisbonne.html">Lisbonne</a></li>
-      <li><a href="prague.html">Prague</a></li>
-    </ul>
+    <h2>Bienvenue chez Challenges de Voyage !</h2>
+    <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
+    <img src="images/travel.jpg" alt="Image de voyage abstraite">
   </main>
 
   <footer>
