--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <h2>Bienvenue chez Challenges de Voyage !</h2>
     <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
-    <img src="images/travel.jpg" alt="Image de voyage abstraite">
+    <img src="https://exemple.com/images/travel.jpg" alt="Image de voyage abstraite">
   </main>
 
   <footer>
