--- a/Stockholm.html
+++ b/Stockholm.html
@@ -19,21 +19,23 @@
   </header>
 
   <main>
-    <h2>Stockholm</h2>
-    <p>Bienvenue à Stockholm, la capitale de la Suède.</p>
-    <h3>Énigmes</h3>
-    <ul>
-      <li><a href="enigme1.html">Énigme 1</a></li>
-      <li><a href="enigme2.html">Énigme 2</a></li>
-      <li><a href="enigme3.html">Énigme 3</a></li>
-    </ul>
-    <h3>Challenges à effectuer à Stockholm</h3>
-    <ul>
-      <li><a href="challenge1.html">Challenge 1</a></li>
-      <li><a href="challenge2.html">Challenge 2</a></li>
-      <li><a href="challenge3.html">Challenge 3</a></li>
-    </ul>
-  </main>
+  <h2>Stockholm</h2>
+  <img src="https://exemple.com/images/stockholm.jpg" alt="Image de Stockholm">
+  <p>Bienvenue à Stockholm, la capitale de la Suède.</p>
+  <h3>Énigmes</h3>
+  <ul>
+    <li><a href="stockholm-enigme1.html">Énigme 1</a></li>
+    <li><a href="stockholm-enigme2.html">Énigme 2</a></li>
+    <li><a href="stockholm-enigme3.html">Énigme 3</a></li>
+  </ul>
+  <h3>Challenges à effectuer à Stockholm</h3>
+  <ul>
+    <li><a href="stockholm-challenge1.html">Challenge 1</a></li>
+    <li><a href="stockholm-challenge2.html">Challenge 2</a></li>
+    <li><a href="stockholm-challenge3.html">Challenge 3</a></li>
+  </ul>
+</main>
+
 
   <footer>
     <p>&copy; 2023 Challenges de Voyage. Tous droits réservés.</p>
