--- a/Prague.html
+++ b/Prague.html
@@ -20,6 +20,7 @@
 
 <main>
   <h2>Prague</h2>
+  <img src="https://exemple.com/images/prague.jpg" alt="Image de Prague">
   <p>Bienvenue à Prague, la capitale de la République tchèque.</p>
   <h3>Énigmes</h3>
   <ul>
@@ -34,6 +35,7 @@
     <li><a href="prague-challenge3.html">Challenge 3</a></li>
   </ul>
 </main>
+
 
 
   <footer>
