--- a/Prague.html
+++ b/Prague.html
@@ -20,7 +20,7 @@
 
 <main>
   <h2>Prague</h2>
-  <img src="https://exemple.com/images/prague.jpg" alt="Image de Prague">
+  <img src="https://th.bing.com/th/id/R.3aa9e9e23112783e9adcac2b61541283?rik=TJrA%2fUcNfVWd2g&riu=http%3a%2f%2fblog.likibu.com%2ffr%2fwp-content%2fuploads%2f2018%2f03%2fPrague_R%c3%a9publique-tch%c3%a8que_Bridges-of-Prague-Czech-Republic.jpeg&ehk=LDQAXxt%2b5nc7zmSMvHPOZV2ivTmSuCKl4tXbZxJO%2foI%3d&risl=&pid=ImgRaw&r=0" alt="Image de Prague">
   <p>Bienvenue à Prague, la capitale de la République tchèque.</p>
   <h3>Énigmes</h3>
   <ul>
