--- a/Stockholm.html
+++ b/Stockholm.html
@@ -20,7 +20,7 @@
 
   <main>
   <h2>Stockholm</h2>
-  <img src="https://exemple.com/images/stockholm.jpg" alt="Image de Stockholm">
+  <img src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Image de Stockholm">
   <p>Bienvenue à Stockholm, la capitale de la Suède.</p>
   <h3>Énigmes</h3>
   <ul>
