--- a/Lisbonne.html
+++ b/Lisbonne.html
@@ -20,6 +20,7 @@
 
   <main>
   <h2>Lisbonne</h2>
+  <img src="https://th.bing.com/th/id/R.2cd7f81e65073cc3f67e58999dee39fd?rik=DET9YmRVOczljQ&pid=ImgRaw&r=0" alt="Image de Lisbonne">
   <p>Bienvenue à Lisbonne, la capitale du Portugal.</p>
   <h3>Énigmes</h3>
   <ul>
@@ -34,4 +35,5 @@
     <li><a href="lisbonne-challenge3.html">Challenge 3</a></li>
   </ul>
 </main>
+
 
