--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Challenges de Voyage</h1>
-    <nav>
-      <ul>
-        <li><a href="stockholm.html">Stockholm</a></li>
-        <li><a href="lisbonne.html">Lisbonne</a></li>
-        <li><a href="prague.html">Prague</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <img src="https://exemple.com/images/person.jpg" alt="Photo de quelqu'un" width="50" height="50">
+  <p>30 ans</p>
+  <h1>Challenges de Voyage</h1>
+  <nav>
+    <ul>
+      <li><a href="stockholm.html">Stockholm</a></li>
+      <li><a href="lisbonne.html">Lisbonne</a></li>
+      <li><a href="prague.html">Prague</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <main>
     <h2>Bienvenue chez Challenges de Voyage !</h2>
