--- a/lisbonne.html
+++ b/lisbonne.html
@@ -7,16 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>Challenges de Voyage</h1>
-    <nav>
-      <ul>
-        <li><a href="stockholm.html">Stockholm</a></li>
-        <li><a href="lisbonne.html">Lisbonne</a></li>
-        <li><a href="prague.html">Prague</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50">
+  <p>30 ans</p>
+  <h1>Challenges de Voyage</h1>
+  <nav>
+    <ul>
+      <li><a href="stockholm.html">Stockholm</a></li>
+      <li><a href="lisbonne.html">Lisbonne</a></li>
+      <li><a href="prague.html">Prague</a></li>
+    </ul>
+  </nav>
+</header>
 
   <main>
   <h2>Lisbonne</h2>
