--- a/stockholm.html
+++ b/stockholm.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 <header>
-  <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50">
-  <p>30 ans</p>
+  <div class="header-left">
+    <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
+    <p style="float: left; margin-top: 5px;">30 ans</p>
+  </div>
   <h1>Challenges de Voyage</h1>
   <nav>
     <ul>
