--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
   <div class="header-left">
     <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
-    <img src="https://static.vecteezy.com/ti/vecteur-libre/p1/4298033-30-anniversaire-logo-concept-30e-annees-anniversaire-icon-isolated-golden-numbers-on-black-background-vector-illustration-eps10-vectoriel.jpg" alt="30 ans" width="50" height="50" style="float: left;">
+    <p style="margin-left: 10px;">30 ans</p>
   </div>
   <h1>Challenges de Voyage</h1>
   <nav>
