--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <h2>Bienvenue chez Challenges de Voyage !</h2>
     <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
-    <img src="https://th.bing.com/th/id/R.3a039dbe7c75b788267c08acbfa3a0df?rik=NjT1gu6UAAGDzw&pid=ImgRaw&r=0" alt="Image de voyage abstraite">
+    <img class="destination-img" src="https://th.bing.com/th/id/R.3a039dbe7c75b788267c08acbfa3a0df?rik=NjT1gu6UAAGDzw&pid=ImgRaw&r=0" alt="Image de voyage abstraite">
   </main>
 
   <footer>
