--- a/lisbonne.html
+++ b/lisbonne.html
@@ -24,7 +24,7 @@
 
   <main>
   <h2>Lisbonne</h2>
-  <img src="https://th.bing.com/th/id/R.2cd7f81e65073cc3f67e58999dee39fd?rik=DET9YmRVOczljQ&pid=ImgRaw&r=0" alt="Image de Lisbonne">
+  <img class="destination-img" src="https://th.bing.com/th/id/R.2cd7f81e65073cc3f67e58999dee39fd?rik=DET9YmRVOczljQ&pid=ImgRaw&r=0" alt="Image de Lisbonne">
   <p>Bienvenue à Lisbonne, la capitale du Portugal.</p>
   <h3>Énigmes</h3>
   <ul>
