--- a/lisbonne.html
+++ b/lisbonne.html
@@ -10,7 +10,7 @@
 <header>
   <div class="header-left">
     <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
-    <img src="https://as1.ftcdn.net/v2/jpg/02/77/72/90/1000_F_277729058_PHRSUMfACjCNuuBs4HiIzyWaJLO4e2Tu.jpg" alt="30 ans" width="50" height="50" style="float: left;">
+    <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
   </div>
   <h1>Challenges de Voyage</h1>
   <nav>
