--- a/lisbonne.html
+++ b/lisbonne.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-  <div class="header-left">
+  <div style="display: flex; align-items: left;">
     <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
     <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
   </div>
