--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
     <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
   </div>
-  <h1>Challenges de Voyage</h1>
+  <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
       <li><a href="stockholm.html">Stockholm</a></li>
