--- a/lisbonne.html
+++ b/lisbonne.html
@@ -8,18 +8,8 @@
 </head>
 <body>
 <header>
-  <div style="display: flex; align-items: left;">
-    <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
-    <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
-  </div>
-  <h1>Challenges de Voyage</h1>
-  <nav>
-    <ul>
-      <li><a href="stockholm.html">Stockholm</a></li>
-      <li><a href="lisbonne.html">Lisbonne</a></li>
-      <li><a href="prague.html">Prague</a></li>
-    </ul>
-  </nav>
+  <!-- Utilisez une instruction PHP pour inclure le fichier -->
+  <?php include("header.html"); ?>
 </header>
 
   <main>
