--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header>
   <div class="header-left">
     <div style="display: flex; align-items: center;">
-      <img src="https://exemple.com/images/photo-personne.jpg" alt="Photo de personne" width="50" height="50">
-      <p style="margin-left: 10px;">Explorer l'inconnu : voyages, rencontres, aventures</p>
+          <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
+          <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
     </div>
   </div>
   <nav>
