--- a/header.html
+++ b/header.html
@@ -5,6 +5,7 @@
           <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
     </div>
   </div>
+  <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
       <li><a href="stockholm.html">Stockholm</a></li>
