Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-  <!-- Utilisez une instruction PHP pour inclure le fichier -->
-  <?php include("header.html"); ?>
-</header>
-
+<iframe src="header.html" frameborder="0" scrolling="no"></iframe>
   <main>
     <h2>Bienvenue chez Challenges de Voyage !</h2>
     <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
