--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Challenges de Voyage</title>
+  <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <iframe src="header.html" frameborder="0" scrolling="no"></iframe>
   <main>
-    <h2>Bienvenue chez Challenges de Voyage !</h2>
+    <h2>Bienvenue !</h2>
     <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
     <img class="destination-img" src="https://th.bing.com/th/id/R.3a039dbe7c75b788267c08acbfa3a0df?rik=NjT1gu6UAAGDzw&pid=ImgRaw&r=0" alt="Image de voyage abstraite">
   </main>
 
   <footer>
-    <p>&copy; 2023 Challenges de Voyage. Tous droits réservés.</p>
+    <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
