--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<iframe src="header.html" frameborder="0" scrolling="no"></iframe>
+<header>
+  <div class="header-left">
+    <div style="display: flex; align-items: center;">
+          <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
+          <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
+    </div>
+  </div>
+  <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
+  <nav>
+    <ul>
+      <li><a href="stockholm.html">Stockholm</a></li>
+      <li><a href="lisbonne.html">Lisbonne</a></li>
+      <li><a href="prague.html">Prague</a></li>
+    </ul>
+  </nav>
+</header>
   <main>
     <h2>Bienvenue !</h2>
     <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
