--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-dZdBCXpxa+yDHy6aqiHY6JumyPE+AWCyYwQBEJ5h5EC5Q2c5r9F5oMLMCBkNRg5y5GURnJJwBRRdLBoNXg5ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 <header>
@@ -17,9 +18,9 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><a href="stockholm.html">Stockholm</a></li>
-      <li><a href="lisbonne.html">Lisbonne</a></li>
-      <li><a href="prague.html">Prague</a></li>
+      <li><a href="stockholm.html"><i class="fas fa-lock"></i> Stockholm</a></li>
+      <li><a href="lisbonne.html"><i class="fas fa-lock"></i> Lisbonne</a></li>
+      <li><a href="prague.html"><i class="fas fa-lock"></i> Prague</a></li>
     </ul>
   </nav>
 </header>
