--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><a href="stockholm.html"><i class="fas fa-lock"></i> Stockholm</a></li>
-      <li><a href="lisbonne.html"><i class="fas fa-lock"></i> Lisbonne</a></li>
-      <li><a href="prague.html"><i class="fas fa-lock"></i> Prague</a></li>
+      <li><i class="fas fa-lock"></i></li>
+      <li><i class="fas fa-lock"></i></li>
+      <li><i class="fas fa-lock"></i></li>
     </ul>
   </nav>
 </header>
