--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><i class="fas fa-lock"></i></li>
+      <li><i class="fas fa-lock">Test</i></li>
       <li><i class="fas fa-lock"></i></li>
       <li><i class="fas fa-lock"></i></li>
     </ul>
