--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><i class="fas fa-lock">Test</i></li>
-      <li><i class="fas fa-lock"></i></li>
-      <li><i class="fas fa-lock"></i></li>
+      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
+      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
+      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
     </ul>
   </nav>
 </header>
