--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-dZdBCXpxa+yDHy6aqiHY6JumyPE+AWCyYwQBEJ5h5EC5Q2c5r9F5oMLMCBkNRg5y5GURnJJwBRRdLBoNXg5ZQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 <header>
@@ -18,9 +18,9 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
-      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
-      <li><i class="fa-sharp fa-regular fa-lock" style="color: #e9cd1c;"></i></li>
+      <li><i class="material-icons">lock_outline</i></li>
+      <li><i class="material-icons">lock_outline</i></li>
+      <li><i class="material-icons">lock_outline</i></li>
     </ul>
   </nav>
 </header>
