--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
           <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
     </div>
   </div>
+  <div class="footprints">
+  <i class="fas fa-shoe-prints"></i>
+  <i class="fas fa-shoe-prints"></i>
+  <i class="fas fa-shoe-prints"></i>
+  <i class="fas fa-shoe-prints"></i>
+  <i class="fas fa-shoe-prints"></i>
+  </div>
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
