--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
   </div>
   <div class="footprints">
-  <i class="fas fa-shoe-prints"></i>
-  <i class="fas fa-shoe-prints"></i>
-  <i class="fas fa-shoe-prints"></i>
-  <i class="fas fa-shoe-prints"></i>
-  <i class="fas fa-shoe-prints"></i>
+  <ion-icon name="footsteps-outline"></ion-icon>
+  <ion-icon name="footsteps-outline"></ion-icon>
+  <ion-icon name="footsteps-outline"></ion-icon>
+  <ion-icon name="footsteps-outline"></ion-icon>
+  <ion-icon name="footsteps-outline"></ion-icon>
   </div>
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
