--- a/index.html
+++ b/index.html
@@ -32,10 +32,46 @@
   </nav>
 </header>
   <main>
-    <h2>Bienvenue !</h2>
-    <p>Vous voulez voyager de manière amusante et excitante ? Bienvenue chez Challenges de Voyage ! Nous vous proposons une expérience unique, remplie d'énigmes et de challenges passionnants dans les plus belles villes d'Europe.</p>
-    <img class="destination-img" src="https://th.bing.com/th/id/R.3a039dbe7c75b788267c08acbfa3a0df?rik=NjT1gu6UAAGDzw&pid=ImgRaw&r=0" alt="Image de voyage abstraite">
-  </main>
+    <main>
+  <h2>Le bateau ivre</h2>
+  <h3>Arthur Rimbaud</h3>
+  Et dès lors, je me suis baigné dans le Poème <br>
+  De la Mer, infusé d’astres, et lactescent, <br>
+  Dévorant les azurs verts ; où, flottaison blême <br>
+  Et ravie, un noyé pensif parfois descend ; <br> <br>
+
+  Où, teignant tout à coup les bleuités, délires <br>
+  Et rhythmes lents sous les rutilements du jour, <br>
+  Plus fortes que l’alcool, plus vastes que nos lyres, <br>
+  Fermentent les rousseurs amères de l’amour ! <br> <br>
+
+  Je sais les cieux crevant en éclairs, et les trombes <br>
+  Et les ressacs et les courants : je sais le soir, <br>
+  L’Aube exaltée ainsi qu’un peuple de colombes, <br>
+  Et j’ai vu quelquefois ce que l’homme a cru voir ! <br> <br>
+
+  J’ai vu le soleil bas, taché d’horreurs mystiques, <br>
+  Illuminant de longs figements violets, <br>
+  Pareils à des acteurs de drames très antiques <br>
+  Les flots roulant au loin leurs frissons de volets ! <br> <br>
+
+  J’ai rêvé la nuit verte aux neiges éblouies, <br>
+  Baisers montant aux yeux des mers avec lenteurs, <br>
+  La circulation des sèves inouïes, <br>
+  Et l’éveil jaune et bleu des phosphores chanteurs ! <br> <br>
+
+  J’ai suivi, des mois pleins, pareille aux vacheries <br>
+  Hystériques, la houle à l’assaut des récifs, <br>
+  Sans songer que les pieds lumineux des Maries <br>
+  Pussent forcer le mufle aux Océans poussifs ! <br> <br>
+
+  J’ai heurté, savez-vous, d’incroyables Florides <br>
+  Mêlant aux fleurs des yeux de panthères à peaux <br>
+  D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
+  Sous l’horizon des mers, à de glauques <br> <br>
+
+    
+    </main>
 
   <footer>
     <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
