--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   Mêlant aux fleurs des yeux de panthères à peaux <br>
   D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
   Sous l’horizon des mers, à de glauques <br> <br>
-
+<img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="200" height="200" style="float: left;">
+          
     
     </main>
 
