--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <main>
     <main>
   <img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="500" height="500" style="float: left;">
+  <div style="max-width: 500px; align-self: flex-start;">
   <h2>Le bateau ivre</h2>
   <h3>Arthur Rimbaud</h3>
   Et dès lors, je me suis baigné dans le Poème <br>
@@ -70,7 +71,7 @@
   Mêlant aux fleurs des yeux de panthères à peaux <br>
   D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
   Sous l’horizon des mers, à de glauques <br> <br>
-
+  </div>
           
     
     </main>
