--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </header>
   <main>
   <img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="500" height="500" style="float: left;">
-  <div style="max-width: 500px; align-self: flex-start;">
+  <div style="max-height: 500px; align-self: flex-start;">
   <h2>Le bateau ivre</h2>
   <h3>Arthur Rimbaud</h3>
   Et dès lors, je me suis baigné dans le Poème <br>
