--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
   </nav>
 </header>
   <main>
-  <img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="500" height="500" style="float: left;">
-  <div style="max-height: 500px; align-self: flex-start;">
+  <div class="img-container">
+      <img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="500" height="500">
+    </div>
+    <div class="text-container">
+      <div class="text-part">
   <h2>Le bateau ivre</h2>
   <h3>Arthur Rimbaud</h3>
   Et dès lors, je me suis baigné dans le Poème <br>
@@ -50,8 +53,8 @@
   Et les ressacs et les courants : je sais le soir, <br>
   L’Aube exaltée ainsi qu’un peuple de colombes, <br>
   Et j’ai vu quelquefois ce que l’homme a cru voir ! <br> <br>
-
-  J’ai vu le soleil bas, taché d’horreurs mystiques, <br>
+<div class="text-part">
+ J’ai vu le soleil bas, taché d’horreurs mystiques, <br>
   Illuminant de longs figements violets, <br>
   Pareils à des acteurs de drames très antiques <br>
   Les flots roulant au loin leurs frissons de volets ! <br> <br>
@@ -70,6 +73,8 @@
   Mêlant aux fleurs des yeux de panthères à peaux <br>
   D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
   Sous l’horizon des mers, à de glauques <br> <br>
+      </div>
+ 
   </div>  
   </main>
   <footer>
