--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       Et les ressacs et les courants : je sais le soir, <br>
       L’Aube exaltée ainsi qu’un peuple de colombes, <br>
       Et j’ai vu quelquefois ce que l’homme a cru voir ! <br> <br>
-
+    </div> 
+    <div class="text-container">
       J’ai vu le soleil bas, taché d’horreurs mystiques, <br>
       Illuminant de longs figements violets, <br>
       Pareils à des acteurs de drames très antiques <br>
@@ -60,7 +61,8 @@
       Hystériques, la houle à l’assaut des récifs, <br>
       Sans songer que les pieds lumineux des Maries <br>
       Pussent forcer le mufle aux Océans poussifs ! <br> <br>
-
+    </div> 
+    <div class="text-container">
       J’ai heurté, savez-vous, d’incroyables Florides <br>
       Mêlant aux fleurs des yeux de panthères à peaux <br>
       D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
