--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
           <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
     </div>
   </div>
+  <div class="header-right">
+    <input type="text" id="secretWord" placeholder="Entrez le mot secret">
+    <button onclick="checkSecretWord()">Valider</button>
+  </div>
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
