--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li><i class="material-icons">lock_outline</i></li>
-      <li><i class="material-icons">lock_outline</i></li>
-      <li><i class="material-icons">lock_outline</i></li>
+      <li class="lock1"><i class="material-icons">lock_outline</i></li>
+      <li class="lock2"><i class="material-icons">lock_outline</i></li>
+      <li class="lock3"><i class="material-icons">lock_outline</i></li>
     </ul>
   </nav>
 </header>
