--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
+  <title><a href="https://bertrand9999.github.io/Challenges">Explorer l'inconnu : voyages, rencontres, aventures</a></title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
