--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><a href="https://bertrand9999.github.io/Challenges">Explorer l'inconnu : voyages, rencontres, aventures</a></title>
+  <a href="https://bertrand9999.github.io/Challenges">
+  <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
+  </a>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
@@ -11,8 +13,12 @@
 <header>
   <div class="header-left">
     <div style="display: flex; align-items: center;">
+      <a href="https://bertrand9999.github.io/Challenges">
           <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
-          <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
+      </a>
+      <a href="https://bertrand9999.github.io/Challenges">
+        <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
+      </a>
     </div>
   </div>
   <div class="header-right">
