--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header>
+  <div class="wrapper">
   <div class="header-left">
     <div style="display: flex; align-items: center;">
       <a href="https://bertrand9999.github.io/Challenges">
@@ -81,5 +82,6 @@
   <footer>
     <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
+  </div>
 </body>
 </html>
