--- a/lisbonne.html
+++ b/lisbonne.html
@@ -23,7 +23,7 @@
   <nav>
     <ul>
       <li class="lock1"><a href="https://bertrand9999.github.io/Challenges/stockholm.html"><i class="material-icons">lock_open</i></a></li>
-      <li class="lock2"><i class="material-icons">lock_outline</i></li>
+      <li class="lock2"><a href="https://bertrand9999.github.io/Challenges/lisbonne.html"><i class="material-icons">lock_open</i></a></li>
       <li class="lock3"><i class="material-icons">lock_outline</i></li>
     </ul>
   </nav>
