--- a/prague.html
+++ b/prague.html
@@ -22,8 +22,8 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li class="lock1"><a href="https://bertrand9999.github.io/Challenges/stockholm.html"><i class="material-icons">lock_open</i></a></li>
-      <li class="lock2"><a href="https://bertrand9999.github.io/Challenges/Lisbonne.html"><i class="material-icons">lock_open</i></a></li>
+      <li class="lock1"><i class="material-icons">lock_outline</i></li>
+      <li class="lock2"><i class="material-icons">lock_outline</i></li>
       <li class="lock3"><a href="https://bertrand9999.github.io/Challenges/Prague.html"><i class="material-icons">lock_open</i></a></li>
     </ul>
   </nav>
