--- a/stockholm.html
+++ b/stockholm.html
@@ -23,7 +23,7 @@
   <h1>Explorer l'inconnu : voyages, rencontres, aventures</h1>
   <nav>
     <ul>
-      <li class="lock1"><a href="https://bertrand9999.github.io/Challenges/stockholm.html"><i class="material-icons">lock_open</i></a></li>
+      <li class="lock1"><i class="material-icons">lock_outline</i></li>
       <li class="lock2"><i class="material-icons">lock_outline</i></li>
       <li class="lock3"><i class="material-icons">lock_outline</i></li>
     </ul>
