--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
   </nav>
 </header>
-  <main>
+  <main class="home">
   <div class="img-container">
      <img src="https://www.galerie-com.com/grand_img/0678454001540763017.jpg" alt="Voyage" width="500" height="500">
   </div>
