--- a/stockholm.html
+++ b/stockholm.html
@@ -34,6 +34,13 @@
   <h2>Stockholm</h2>
   <img class="destination-img" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Image de Stockholm">
   <p>Bienvenue à Stockholm, la capitale de la Suède.</p>
+  <div>
+  <a href="Stockholm - Destination.pdf" target="_blank">
+  <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
+  Stockholm - Destination.pdf
+  </a>
+  </div>
+  
   <h3>Énigmes</h3>
   <ul>
     <li><a href="stockholm-enigme1.html">Énigme 1</a></li>
