--- a/stockholm.html
+++ b/stockholm.html
@@ -35,19 +35,19 @@
   <img class="destination-img" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Image de Stockholm">
   <p>Bienvenue à Stockholm, la capitale de la Suède.</p>
   <div>
-  <a href="F5e#nZ1vC/Stockholm - Destination.pdf" target="_blank">
+  <a href="Stockholm/F5e#nZ1vC/Stockholm - Destination.pdf" target="_blank">
   <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
   Stockholm - Destination.pdf
   </a>
   </div>
     <div>
-  <a href="Q9x!uP6fJ/Stockholm - Défis.pdf" target="_blank">
+  <a href="Stockholm/Q9x!uP6fJ/Stockholm - Défis.pdf" target="_blank">
   <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
   Stockholm - Défis.pdf
   </a>
   </div>
     <div>
-  <a href="T2w@yG7bR/Stockholm - Aide.pdf" target="_blank">
+  <a href="Stockholm/T2w@yG7bR/Stockholm - Aide.pdf" target="_blank">
   <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
   Stockholm - Aide.pdf
   </a>
