--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
   </div>
-  <script src="secret-word.js"></script>
+  <script src="depenses.js"></script>
 </body>
 </html>
