--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
   <ul id="itemList"></ul>
   <button onclick="validateExpenses()">Valider les dépenses</button>
   <script src="depenses.js"></script>
+    <h3>Dépenses validées</h3>
+<ul id="validatedExpensesList"></ul>
   </div>
 
   <footer>
