--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <h3>Ajouter un élément</h3>
   <input type="text" id="itemName" placeholder="Nom de l'élément">
   <input type="number" id="itemPrice" placeholder="Prix">
-  <button onclick="addItem()">Ajouter</button>
+  <button id="addItemButton">Ajouter</button>
   <h3>Panier</h3>
   <ul id="itemList"></ul>
   <button onclick="validateExpenses()">Valider les dépenses</button>
