--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <button id="addItemButton">Ajouter</button>
   <h3>Panier</h3>
   <ul id="itemList"></ul>
-  <button onclick="validateExpenses()">Valider les dépenses</button>
+ <button id="validateExpensesButton">Valider les dépenses</button>
   <script src="depenses.js"></script>
     <h3>Dépenses validées</h3>
 <ul id="validatedExpensesList"></ul>
