--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div class="wrapper">
   <div class="header-left">
     <div style="display: flex; align-items: center;">
-      <a href="https://bertrand9999.github.io/Challenges">
-          <img src="https://img.freepik.com/vecteurs-premium/icone-globe-voyage_1639-5645.jpg?w=1380" alt="Manue" width="50" height="50" style="float: left;">
+           <a href="https://bertrand9999.github.io/Challenges">
+          <img src="https://media.licdn.com/dms/image/C4D03AQGtnEQNP2GTNw/profile-displayphoto-shrink_800_800/0/1621501219643?e=2147483647&v=beta&t=AY_7CGL8fkEs5NZRQZE-_qRcSPYn9rYRYHIxtPgFy80" alt="Manue" width="50" height="50" style="float: left;">
       </a>
-        <p style="margin-left: 10px;">30 ans Emmanuelle</p>
+        <p style="margin-left: 10px;">Défiez vos 30 ans !</p>
     </div>
   </div>
   <div class="header-right">
