--- a/stockholm.html
+++ b/stockholm.html
@@ -54,7 +54,18 @@
   Stockholm - Aide.pdf
   </a>
   </div>
- 
+    
+ <div class="content-wrapper">
+        <div id="timer" class="timer">
+    <div id="jours" class="countdown-number"></div>
+    <div id="heures" class="countdown-number"></div>
+    <div id="minutes" class="countdown-number"></div>
+    <div id="secondes" class="countdown-number"></div>
+    </div>
+   <p class="poetic-text">Découvrez les merveilles de Stockholm avant que le temps ne s'échappe...</p>
+   </div>
+   <script src="timer.js"></script>
+   
 </main>
 <div class="sidebar">
   <h2>Compteur de dépenses</h2>
