--- a/stockholm.html
+++ b/stockholm.html
@@ -85,7 +85,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2023 Challenges de Voyage. Tous droits réservés.</p>
+    <p>&copy; Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
