--- a/lisbonne.html
+++ b/lisbonne.html
@@ -51,7 +51,7 @@
   </ul>
 </main>
 <footer>
-    <p>&copy; 2023 Challenges de Voyage. Tous droits réservés.</p>
+    <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
