--- a/prague.html
+++ b/prague.html
@@ -53,7 +53,7 @@
 
 
   <footer>
-    <p>&copy; 2023 Challenges de Voyage. Tous droits réservés.</p>
+    <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
 </body>
 </html>
