--- a/stockholm.html
+++ b/stockholm.html
@@ -33,20 +33,18 @@
 </header>
 
   <main>
-  <h2>Stockholm</h2>
-  <img class="destination-img" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Image de Stockholm">
-
-  <div>
-     <div class="content-wrapper">
+      <div class="content-wrapper">
         <div id="timer" class="timer">
     <div id="jours" class="countdown-number"></div>
     <div id="heures" class="countdown-number"></div>
     <div id="minutes" class="countdown-number"></div>
     <div id="secondes" class="countdown-number"></div>
+</div>
+
+        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" />
+        <p class="poetic-text">Découvrez les merveilles de Stockholm avant que le temps ne s'échappe...</p>
     </div>
-   <p class="poetic-text">Découvrez les merveilles de Stockholm avant que le temps ne s'échappe...</p>
-   </div>
-   <script src="timer.js"></script>
+    <script src="timer.js"></script>
   <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
   <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
   Stockholm - Destination.pdf
