--- a/stockholm.html
+++ b/stockholm.html
@@ -63,9 +63,18 @@
   </a>
   </div>
     
-
+<div class="separator"></div>
+    <!-- Ajout des photos et descriptions -->
+    <div class="photo-texts">
+      <div class="photo-text">
+        <img src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Description de la photo 1">
+        <p>Description de la photo 1</p>
+      </div>
+      <!-- Ajoutez ici les 9 autres éléments .photo-text avec les liens vers les photos et les descriptions -->
+    </div>
    
 </main>
+  
 <div class="sidebar">
   <h2>Compteur de dépenses</h2>
   <p>Somme initiale : <span id="initialAmount">400</span> €</p>
