--- a/stockholm.html
+++ b/stockholm.html
@@ -67,7 +67,7 @@
     <!-- Ajout des photos et descriptions -->
     <div class="photo-texts">
       <div class="photo-text">
-        <img src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Description de la photo 1">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
         <p>Description de la photo 1</p>
       </div>
       <!-- Ajoutez ici les 9 autres éléments .photo-text avec les liens vers les photos et les descriptions -->
