--- a/stockholm.html
+++ b/stockholm.html
@@ -33,7 +33,7 @@
 </header>
 
   <main>
-      <div class="content-wrapper">
+      <div class="content-wrapper"  style="position: relative;">
         <div id="timer" class="timer">
     <div id="jours" class="countdown-number"></div>
     <div id="heures" class="countdown-number"></div>
