--- a/stockholm.html
+++ b/stockholm.html
@@ -64,15 +64,47 @@
   </div>
     
 <div class="separator"></div>
-    <!-- Ajout des photos et descriptions -->
-    <div class="photo-texts">
-      <div class="photo-text">
+   <div class="photo-text left">
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
         <p>Description de la photo 1</p>
       </div>
-      <!-- Ajoutez ici les 9 autres éléments .photo-text avec les liens vers les photos et les descriptions -->
-    </div>
-   
+      <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
+        <p>Description de la photo 2</p>
+      </div>
+  <div class="photo-text left">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 3">
+        <p>Description de la photo 3</p>
+      </div>
+      <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 4">
+        <p>Description de la photo 4</p>
+      </div>
+  <div class="photo-text left">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 5">
+        <p>Description de la photo 5</p>
+      </div>
+      <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 6">
+        <p>Description de la photo 6</p>
+      </div>
+  <div class="photo-text left">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 7">
+        <p>Description de la photo 7</p>
+      </div>
+      <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 8">
+        <p>Description de la photo 8</p>
+      </div>
+  <div class="photo-text left">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 9">
+        <p>Description de la photo 9</p>
+      </div>
+      <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 10">
+        <p>Description de la photo 10</p>
+      </div>  
+     
 </main>
   
 <div class="sidebar">
