--- a/stockholm.html
+++ b/stockholm.html
@@ -64,6 +64,7 @@
   </div>
     
 <div class="separator"></div>
+   <div class="photo-text-container">
    <div class="photo-text left">
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
         <p>Description de la photo 1</p>
@@ -104,7 +105,7 @@
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 10">
         <p>Description de la photo 10</p>
       </div>  
-     
+  </div>
 </main>
   
 <div class="sidebar">
