--- a/stockholm.html
+++ b/stockholm.html
@@ -62,7 +62,8 @@
   Stockholm - Aide.pdf
   </a>
   </div>
-    
+  
+    <div class="main-content">
 <div class="separator"></div>
    <div class="photo-text-container">
    <div class="photo-text left">
@@ -105,6 +106,7 @@
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 10">
         <p>Description de la photo 10</p>
       </div>  
+  </div>
   </div>
 </main>
   
