--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "firebase/app";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+  // Your web app's Firebase configuration
+   <script>
+      const firebaseConfig = {
+      apiKey: "AIzaSyBhb-gYuXWKOnCuN_z4FEt17SkW_nOPqao",
+      authDomain: "challenge-c426a.firebaseapp.com",
+      projectId: "challenge-c426a",
+      storageBucket: "challenge-c426a.appspot.com",
+      messagingSenderId: "428726302902",
+      appId: "1:428726302902:web:772e20c8915a593c2c0e17"
+    };
+  </script>
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
 </head>
 <body>
 <header>
