--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       messagingSenderId: "428726302902",
       appId: "1:428726302902:web:772e20c8915a593c2c0e17"
     };
+     firebase.initializeApp(firebaseConfig);
   </script>
 
 // Initialize Firebase
