--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <title>Explorer l'inconnu : voyages, rencontres, aventures</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "firebase/app";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-  // Your web app's Firebase configuration
+   <!-- Firebase -->
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
    <script>
       const firebaseConfig = {
       apiKey: "AIzaSyBhb-gYuXWKOnCuN_z4FEt17SkW_nOPqao",
