--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       appId: "1:428726302902:web:772e20c8915a593c2c0e17"
     };
      // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
+    const app = firebase.initializeApp(firebaseConfig);
   </script>
 </head>
 <body>
