--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
   <div class="sidebar">
   <h2>Compteur de dépenses</h2>
   <p>Somme initiale : <span id="initialAmount">400</span> €</p>
-<p>Somme restante : <span id="remainingAmount">400</span> €</p>
+  <p>Somme restante : <span id="remainingAmount">400</span> €</p>
 
-  <h3>Ajouter un élément</h3>
-  <input type="text" id="itemName" placeholder="Nom de l'élément">
-  <input type="number" id="itemPrice" placeholder="Prix">
-  <button id="addItemButton">Ajouter</button>
-  <h3>Panier</h3>
-  <ul id="itemList"></ul>
- <button id="validateExpensesButton">Valider les dépenses</button>
+  <h3>Ajouter une dépense</h3>
+  <input type="text" id="expenseName" placeholder="Nom de la dépense">
+  <input type="number" id="expenseAmount" placeholder="Montant">
+  <button id="addExpenseButton">Ajouter</button>
+
+  <h3>Dépenses</h3>
+  <ul id="expenseList"></ul>
+
   <script src="depenses.js"></script>
-    <h3>Dépenses validées</h3>
-<ul id="validatedExpensesList"></ul>
-  </div>
+</div>
+
 
   <footer>
     <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
