--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
      // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
   </script>
+  <script src="depenses.js"></script>
 </head>
 <body>
 <header>
