--- a/index.html
+++ b/index.html
@@ -49,53 +49,11 @@
   </nav>
 </header>
   <main class="home">
-  <div class="img-container">
-     <img src="https://th.bing.com/th/id/R.6c3c13f41d790ab7371edc0220b6e40b?rik=lD2lTLBRz%2fGWug&riu=http%3a%2f%2fwww.jclblog.fr%2fwp-content%2fuploads%2f2016%2f07%2fvoyages-photos-1170x658.jpg&ehk=6f8UqsShEHWCz7VHzBes6XUiYCT3%2bdzhJbBdSGJUqw0%3d&risl=&pid=ImgRaw&r=0" alt="Voyage" width="1000" height="500">
-  </div>
-  <div class="text-container">
-      <h2>Le bateau ivre</h2>
-      <h3>Arthur Rimbaud</h3>
-      Et dès lors, je me suis baigné dans le Poème <br>
-      De la Mer, infusé d’astres, et lactescent, <br>
-      Dévorant les azurs verts ; où, flottaison blême <br>
-      Et ravie, un noyé pensif parfois descend ; <br> <br>
-
-      Où, teignant tout à coup les bleuités, délires <br>
-      Et rhythmes lents sous les rutilements du jour, <br>
-      Plus fortes que l’alcool, plus vastes que nos lyres, <br>
-      Fermentent les rousseurs amères de l’amour ! <br> <br>
-
-      Je sais les cieux crevant en éclairs, et les trombes <br>
-      Et les ressacs et les courants : je sais le soir, <br>
-      L’Aube exaltée ainsi qu’un peuple de colombes, <br>
-      Et j’ai vu quelquefois ce que l’homme a cru voir ! <br> <br>
-    </div> 
-    <div class="text-container">
-      <br> <br><br> <br>
-      J’ai vu le soleil bas, taché d’horreurs mystiques, <br>
-      Illuminant de longs figements violets, <br>
-      Pareils à des acteurs de drames très antiques <br>
-      Les flots roulant au loin leurs frissons de volets ! <br> <br>
-
-      J’ai rêvé la nuit verte aux neiges éblouies, <br>
-      Baisers montant aux yeux des mers avec lenteurs, <br>
-      La circulation des sèves inouïes, <br>
-      Et l’éveil jaune et bleu des phosphores chanteurs ! <br> <br>
-
-      J’ai suivi, des mois pleins, pareille aux vacheries <br>
-      Hystériques, la houle à l’assaut des récifs, <br>
-      Sans songer que les pieds lumineux des Maries <br>
-      Pussent forcer le mufle aux Océans poussifs ! <br> <br>
-    </div> 
-    <div class="text-container">
-      <br><br><br> <br>
-      J’ai heurté, savez-vous, d’incroyables Florides <br>
-      Mêlant aux fleurs des yeux de panthères à peaux <br>
-      D’hommes ! Des arcs-en-ciel tendus comme des brides <br>
-      Sous l’horizon des mers, à de glauques <br> <br>
-  </div>  
-  
-  </main>
+  <video autoplay muted loop>
+    <source src="yourVideo.mp4" type="video/mp4">
+    Votre navigateur ne supporte pas l'élément video.
+  </video>
+    </main>
 <div class="sidebar">
     <h2>Compteur de dépenses</h2>
     <p>Somme initiale : <span id="initialAmount">400</span> €</p>
